fix/style: ajusta gap no login

--- a/src/index/styles/_index.scss
+++ b/src/index/styles/_index.scss
@@ -24,6 +24,7 @@
     font-family: "HelveticaNeue", Helvetica, Arial, sans-serif;
     @include breakpoint(medium-up) {
       width: 80%;
+      gap: 0.75rem;
     }
   }
   .c-form-group {
